tests/error/static_out.gw
// [contains] static variables must be declared at class scope
 static int i;
